--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
     </script>
 </head>
 <body>
-<h1>Online Java Compiler</h1>
+<h1>Online Java Compiler!</h1>
 <form>
     <textarea id="sourceCode" name="sourceCode" rows="20" cols="80" placeholder="Enter your Java code here" th:text="${sourceCode}"></textarea><br/>
     <button type="submit">Compile</button>
