--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Online Java Compiler!</title>
+    <title>Online Java Compiler</title>
+    <link rel="icon" href="/icon/duke.ico" type="image/x-icon">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(document).ready(function() {
@@ -27,7 +28,7 @@
     </script>
 </head>
 <body>
-<h1>Online Java Compiler!</h1>
+<h1>Online Java Compiler</h1>
 <form>
     <textarea id="sourceCode" name="sourceCode" rows="20" cols="80" placeholder="Enter your Java code here" th:text="${sourceCode}"></textarea><br/>
     <button type="submit">Compile</button>
